# OrchFS

./: .gitignore  CMakeLists.txt  README.MD  config_parameter.py  posix.md
Async/: block_device.cpp  client.cpp  ipc_transport.cpp  kfs_coroutine_core.cpp  namespace_coordinator.cpp  range_arbiter.cpp  repro_trace.cpp  runtime.cpp  server.cpp
KernelFS/: async_device.h  async_server_bridge.cpp  async_server_bridge.h  async_server_bridge_internal.hpp  balloc.c  balloc.h  device.c  device.h  execio_thdpool.c  kernel_func.c  kernel_func.h  kernel_main.c  kindex.c  kindex.h  layered_benchmark.cpp  log.c  mkfs.c  spdk_device_service.cpp  spdk_device_service.h  spdk_nvme_backend.cpp  spdk_nvme_backend.hpp  spdk_nvme_bridge.cpp  spdk_nvme_bridge.h  thread_affinity_guard.hpp  type.h
LibFS/: async_adapter.cpp  async_adapter.h  dir_cache.c  dir_cache.h  ffile.c  index.c  index.h  io_thdpool.c  kfs_core_api.c  kfs_core_api.h  kfs_data_plan.c  lib_dir.c  lib_dir.h  lib_func.c  lib_inode.c  lib_inode.h  lib_log.c  lib_log.h  lib_shm.c  libspace.c  libspace.h  meta_cache.c  meta_cache.h  migrate.c  migrate.h  orchfs.h  orchfs_wrapper.c  req_kernel.c  req_kernel.h  runtime.c
cmake/: runtime_native_gate.cmake
config/: config-template.sh  config.h  config_template.h
docs/: async-optimization-plan.md  async-spdk.md  metadata-benchmark.md  optimization-results-20260721.md  paper-reproduction.md  reproduction-results-20260722.md
docs/images/: orchfs-async-request-flow.dot
filebench/: fb_localfs.c
include/orchfs/: crc32c.h  disk_format.h  repro_trace.h
include/orchfs/async/: block_device.hpp  client.hpp  file_arbitration.hpp  filesystem.hpp  ipc_protocol.hpp  ipc_transport.hpp  kfs_coroutine_core.hpp  range_arbiter.hpp  repro_trace.hpp  result.hpp  rpc_protocol.hpp  runtime.hpp  server.hpp  task.hpp
include/orchfs/async/detail/: concurrency.hpp  cpu_list.hpp  namespace_coordinator.hpp  range_lock.hpp  stat_conversion.hpp  stat_fields.inc
scripts/async/: run_layered_benchmark.sh
scripts/filebench/: fbtest.c
scripts/micro/: microtest.c
scripts/reproduction/: build_filebench.sh  generate_filebench_workload.py  gridgraph-compat.patch  gridgraph_edge_converter.c  orchfs_metadata_bench.c  orchfs_repro_bench.c  orchfs_repro_copy.c  orchfs_repro_mkdir.c  orchfs_ycsb_leveldb.cpp  plot_reproduction.py  run_filebench.py  run_fragmentation.py  run_gridgraph.py  run_leveldb_ycsb.py  run_metadata.py  run_reproduction.py  summarize_trace.py  sync-fair.patch  sync_profile.bt
test/: async_block_device_test.cpp  async_client_server_test.cpp  async_ipc_test.cpp  async_persistence_probe.c  async_posix_probe.c  async_runtime_test.cpp  journal_recovery_test.c  kfs_coroutine_core_test.cpp  legacy_lib_func_test.c  legacy_rename_core_test.c  legacy_wrapper_host_test.c  namespace_coordinator_test.cpp  spdk_nvme_device_test.cpp  spdk_nvme_logic_test.cpp
